fixed the toggle switch output. was still visible.

--- a/_vds-src/scss/_slick.scss
+++ b/_vds-src/scss/_slick.scss
@@ -102,7 +102,7 @@
 .logo-next, .logo-prev {
     position: absolute;
     top: 50%;
-    z-index: 100000;
+    z-index: 1;
     margin-top: -.75rem;
 }
 .logo-prev {
